--- a/cari-kerja.html
+++ b/cari-kerja.html
@@ -80,7 +80,7 @@
     <!-- Main -->
     <div class="container-fluid row-putih">
         <div class="container">
-            <div class="row mb-5 rekomen-kerja">
+            <div class="row mb-5 rekomen">
                 <div class="col-lg-7">
                     <p class="besar"><b>Rekomendasi Pekerjaan</b></p>
                     <p>Login dan temukan pekerjaan sesuai dengan minatmu<a href="" class="ml-3">Daftar sekarang</a></p>
