--- a/detail-pelatihan.html
+++ b/detail-pelatihan.html
@@ -44,36 +44,39 @@
     </nav>
     <!-- Navbar -->
 
-    <!-- Row Login -->
-    <div class="container-fluid row-abu2 py-3">
-        <div class="container">
-            <p class="my-auto"><img src="img/info.svg" class="mr-2" alt="">Login untuk melihan kecocokan Pekerjaan ini dengan minat Anda. <a href="">Login Sekarang</a></p>
-        </div>
-    </div>
-    <!-- Row Login -->
-
     <!-- Title -->
     <div class="container-fluid detailkerja-title row-abu py-4">
         <div class="container">
             <div class="row">
-                <div class="col-2">
-                    <img src="img/detailkerja-img.svg" alt="">
+                <div class="col-3">
+                    <img src="img/detailpelatihan-img.svg" alt="">
                 </div>
-                <div class="col-7 my-auto">
-                    <p class="besar">Nama Pekerjaan</p>
-                    <p class="abu">Nama Instansi</p>
+                <div class="col-5 my-auto">
+                    <p class="besar">Nama Pelatihan</p>
+                    <p class="abu">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, soluta aliquid animi corporis nostrum asperiores.</p>
                     <div class="row">
-                        <div class="col-3">
-                            <p>DKI Jakarta</p>
+                        <div class="col-6">
+                            <p class="mb-0"><img src="img/kata-img1.svg" class="mr-2" alt="">Nama Speaker</p>
                         </div>
-                        <div class="col-3">
-                            <p><b>Full Time</b></p>
+                        <div class="col-5 my-auto">
+                            <div class="row">
+                                <img src="img/star.svg" class="mr-2" alt="">
+                                <p class="mb-0">4.8 (100k)</p>
+                            </div>
+
                         </div>
                     </div>
                 </div>
-                <div class="col-3 my-auto">
-                    <button class="btn btndefault mb-2">Daftar Pekerjaan</button>
-                    <p class="abu">Diposting 1 Minggu yang lalu</p>
+                <div class="col-3 my-auto ml-auto text-right">
+                    <p class="harga-besar"><b>Rp 500.000</b></p>
+                    <p class="harga-coret d-inline mr-3">Rp 700.000</p>
+                    <p class="d-inline">20$ OFF</p>
+                    <div class="row">
+                        <div class="col-12 text-right mt-3">
+                            <button class="btn btndefault d-inline">a</button>
+                            <button class="btn btndefault d-inline">Beli Sekarang</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -82,33 +85,22 @@
 
     <!-- Main -->
     <div class="container my-5">
-        <div class="container detailkerja-isi p-4 mb-3">
-            <div class="row">
-                <div class="col-12 mb-3">
-                    <p class="besar">Deskripsi Pekerjaan</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
-                </div>
-                <div class="col-12 mb-3">
-                    <p class="besar">Deskripsi Pekerjaan</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
-                </div>
-                <div class="col-3">
-                    <p class="besar">Level</p>
-                    <p>Tipe Pekerjaan</p>
-                </div>
-                <div class="col-3">
-                    <p class="besar">Tipe Pekerjaan</p>
-                    <p>Full Time</p>
-                </div>
+        <div class="row">
+            <div class="col-12 mb-3">
+                <p class="besar">Deskripsi Pekerjaan</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
             </div>
-        </div>
-        
-        <div class="container detailkerja-isi p-4">
-            <div class="row">
-                <div class="col-12">
-                    <p class="besar">Deskripsi Perusahaan</p>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
-                </div>
+            <div class="col-12 mb-3">
+                <p class="besar">Deskripsi Pekerjaan</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
+            </div>
+            <div class="col-3">
+                <p class="besar">Level</p>
+                <p>Tipe Pekerjaan</p>
+            </div>
+            <div class="col-3">
+                <p class="besar">Tipe Pekerjaan</p>
+                <p>Full Time</p>
             </div>
         </div>
     </div>
