--- a/cari-pelatihan.html
+++ b/cari-pelatihan.html
@@ -8,7 +8,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -25,13 +24,16 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Beranda</a>
+                        <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Cari Pekerjaan</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Cari Pelatihan</a>
                     </li>
                 </ul>
@@ -59,22 +61,16 @@
             <ul class="nav my-auto">
                 <p class="my-auto mr-4">Popular Topik</p>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Kategori</a>
+                    <a class="nav-link" href="#">Software</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Kategori</a>
+                    <a class="nav-link" href="#">Pemasaran</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Kategori</a>
+                    <a class="nav-link" href="#">Pengembangan Diri</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Kategori</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Kategori</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Kategori</a>
+                    <a class="nav-link" href="#">Sistem Informasi</a>
                 </li>
                 <a href="" class="my-auto">Lihat Semua</a>
             </ul>
@@ -84,8 +80,8 @@
 
     <!-- Main -->
     <div class="container-fluid row-putih">
-        <div class="container">
-            <div class="row mb-5 rekomen">
+        <div class="container rekomen">
+            <div class="row mb-5">
                 <div class="col-lg-7">
                     <p class="besar"><b>Rekomendasi Pelatihan</b></p>
                     <p>Login dan temukan pelatihan sesuai dengan minatmu<a href="" class="ml-3">Daftar sekarang</a></p>
@@ -98,12 +94,12 @@
             <div class="row mb-4">
                 <div class="col-lg-3">
                     <div class="card pelatihan">
-                        <img src="img/header-card.svg" class="card-img-top" alt="...">
+                        <img src="img/header2-card1.svg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <a class="kategori" href="">KATEGORI</a>
-                            <a class="kategori" href="">KATEGORI</a>
-                            <p><b>Nama Latihan</b></p>
-                            <p>Nama Speaker</p>
+                            <a class="kategori" href="">PENGEMBANGAN DIRI</a>
+                            <p class="mb-2"><b>Menjadi pribadi unggul dalam Interview Kerja</b></p>
+                            <p>Muhammad Cipta Suhaja</p>
+                            <p class="abu">Senior Manager, Human Resources, Gojek</p>
                             <br>
                             <div class="row">
                                 <div class="col-6 my-auto">
@@ -114,139 +110,26 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer">
+                        <div class="card-footer cardf-1">
                             <div class="row">
                                 <div class="col-6 pr-0">
-                                    <p ><img src="img/video-library.png" alt="">10 Video</p>
+                                    <p><img src="img/video-library.png" alt="">10 Video</p>
                                 </div>
                                 <div class="col-6 pl-0 text-right">
-                                    <p><img src="img/star.svg" alt=""><b>4.9</b> (2000)</p>
+                                    <p><img src="img/star.svg" alt=""><b>4.3</b> (124)</p>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="card-footer cardf-2 py-0">
+                            <div class="col-12 text-center">
+                                <img src="img/logo-footer.svg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="card pelatihan">
-                        <img src="img/header-card.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a class="kategori" href="">KATEGORI</a>
-                            <a class="kategori" href="">KATEGORI</a>
-                            <p><b>Nama Latihan</b></p>
-                            <p>Nama Speaker</p>
-                            <br>
-                            <div class="row">
-                                <div class="col-6 my-auto">
-                                    <p class="harga1">Rp 700.000</p>
-                                </div>
-                                <div class="col-6 text-right">
-                                    <p class="harga2">Rp 700.000</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="row">
-                                <div class="col-6 pr-0">
-                                    <p ><img src="img/video-library.png" alt="">10 Video</p>
-                                </div>
-                                <div class="col-6 pl-0 text-right">
-                                    <p><img src="img/star.svg" alt=""><b>4.9</b> (2000)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card pelatihan">
-                        <img src="img/header-card.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a class="kategori" href="">KATEGORI</a>
-                            <a class="kategori" href="">KATEGORI</a>
-                            <p><b>Nama Latihan</b></p>
-                            <p>Nama Speaker</p>
-                            <br>
-                            <div class="row">
-                                <div class="col-6 my-auto">
-                                    <p class="harga1">Rp 700.000</p>
-                                </div>
-                                <div class="col-6 text-right">
-                                    <p class="harga2">Rp 700.000</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="row">
-                                <div class="col-6 pr-0">
-                                    <p ><img src="img/video-library.png" alt="">10 Video</p>
-                                </div>
-                                <div class="col-6 pl-0 text-right">
-                                    <p><img src="img/star.svg" alt=""><b>4.9</b> (2000)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card pelatihan">
-                        <img src="img/header-card.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a class="kategori" href="">KATEGORI</a>
-                            <a class="kategori" href="">KATEGORI</a>
-                            <p><b>Nama Latihan</b></p>
-                            <p>Nama Speaker</p>
-                            <br>
-                            <div class="row">
-                                <div class="col-6 my-auto">
-                                    <p class="harga1">Rp 700.000</p>
-                                </div>
-                                <div class="col-6 text-right">
-                                    <p class="harga2">Rp 700.000</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="row">
-                                <div class="col-6 pr-0">
-                                    <p ><img src="img/video-library.png" alt="">10 Video</p>
-                                </div>
-                                <div class="col-6 pl-0 text-right">
-                                    <p><img src="img/star.svg" alt=""><b>4.9</b> (2000)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card pelatihan">
-                        <img src="img/header-card.svg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a class="kategori" href="">KATEGORI</a>
-                            <a class="kategori" href="">KATEGORI</a>
-                            <p><b>Nama Latihan</b></p>
-                            <p>Nama Speaker</p>
-                            <br>
-                            <div class="row">
-                                <div class="col-6 my-auto">
-                                    <p class="harga1">Rp 700.000</p>
-                                </div>
-                                <div class="col-6 text-right">
-                                    <p class="harga2">Rp 700.000</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <div class="row">
-                                <div class="col-6 pr-0">
-                                    <p ><img src="img/video-library.png" alt="">10 Video</p>
-                                </div>
-                                <div class="col-6 pl-0 text-right">
-                                    <p><img src="img/star.svg" alt=""><b>4.9</b> (2000)</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
             </div>
+
             <div class="row">
                 <div class="col-12 text-center">
                     <button class="btn btndefault">Lihat Lebih Banyak</button>
@@ -260,11 +143,11 @@
     <div class="container-fluid row-abu mulai">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                     <p class="besar"><b>Siap temukan pekerjaanmu?</b></p>
                     <p>Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
-                <div class="col-lg-4 my-auto text-right">
+                <div class="col-lg-5 my-auto text-right">
                     <button class="btn btndefault mr-4">Mulai Sekarang</button><button class="btn btnghost">Kontak Kami</button>
                 </div>
             </div>
@@ -284,6 +167,9 @@
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Cari Pekerjaan</a>
