--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -29,6 +28,9 @@
                         <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Kenali Dirimu</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
@@ -45,16 +47,16 @@
     <!-- Navbar -->
 
     <!-- Row 1 -->
-    <div class="container-fluid row-abu">
+    <div class="container-fluid row-abu home1">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5">
-                    <p class="besar">Pekerjaan Vokasi Dalam Satu Portal</p>
-                    <p>Temukan Beragam Pilihan Pekerjaan Vokasi Sesuai dengan Bakat dan Minatmu</p>
-                    <button class="btn btndefault mt-5">Mulai Sekarang</button>
+                <div class="col-lg-6">
+                    <p class="besar"><b>Training and Job Portal for Vocational Students</b></p>
+                    <p class="kecil">Temukan Beragam Pilihan Pekerjaan Vokasi Sesuai dengan Bakat dan Minatmu</p>
+                    <button class="btn btndefault mt-3">MULAI SEKARANG</button>
                 </div>
-                <div class="col-lg-7 text-right">
-                    <img src="img/row-img1.svg" alt="">
+                <div class="col-lg-6 text-right">
+                    <img src="img/home1.svg" alt="">
                 </div>
             </div>
         </div>
@@ -62,16 +64,16 @@
     <!-- Row 1 -->
 
     <!-- Row 2 -->
-    <div class="container-fluid row-putih">
+    <div class="container-fluid row-putih home2">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7">
-                    <img src="img/row-img1.svg" alt="">
+                <div class="col-lg-6">
+                    <img src="img/home2.svg" alt="">
                 </div>
-                <div class="col-lg-5">
-                    <p class="besar">Temukan Pekerjaanmu</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, laudantium!</p>
-                    <button class="btn btndefault mt-5">Cari Pekerjaan</button>
+                <div class="col-lg-6">
+                    <p class="besar"><b>Find a Job</b></p>
+                    <p class="kecil">Berbagi lowongan pekerjaan tersedia untuk lulusan pendidikan Vokasi</p>
+                    <button class="btn btndefault mt-3">CARI PEKERJAAN</button>
                 </div>
             </div>
         </div>
@@ -79,16 +81,16 @@
     <!-- Row 2 -->
 
     <!-- Row 3 -->
-    <div class="container-fluid row-abu">
+    <div class="container-fluid row-abu home3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5">
-                    <p class="besar">Temukan Pelatihanmu</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, facilis!</p>
-                    <button class="btn btndefault mt-5">Cari Pelatihan</button>
+                <div class="col-lg-6">
+                    <p class="besar"><b>Find a Training</b></p>
+                    <p class="kecil">Memiliki kemampuan dan keterampilan yang siap sesuai kebutuhan dunia kerja</p>
+                    <button class="btn btndefault mt-3">CARI PELATIHAN</button>
                 </div>
-                <div class="col-lg-7 text-right">
-                    <img src="img/row-img1.svg" alt="">
+                <div class="col-lg-6 text-right">
+                    <img src="img/home3.svg" alt="">
                 </div>
             </div>
         </div>
@@ -98,25 +100,25 @@
     <!-- Kata -->
     <div class="container-fluid">
         <div class="container kata">
-            <p class="besar text-center">Apa kata mereka semua</p>
+            <p class="besar text-center"><b>Apa kata mereka semua</b></p>
             <div class="row mb-4">
                 <div class="col-lg-6">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores ullam voluptas, eius rerum!"</p>
-                    <p class="kecil"><img src="img/kata-img1.svg" alt="" class="mr-4">Maria Lopez, VP of Design at Meshery</p>
+                    <p>Mempermudah aku buat cari pekerjaan, aku pengen jadi programmer.</p>
+                    <p class="kecil"><img src="img/kata-img1.svg" alt="" class="mr-3">Siswa SMK 2 Teladan/p>
                 </div>
                 <div class="col-lg-6">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores ullam voluptas, eius rerum!"</p>
-                    <p class="kecil"><img src="img/kata-img1.svg" alt="" class="mr-4">Maria Lopez, VP of Design at Meshery</p>
+                    <p>Lengkap, pekerjaan untuk siswa-siswi Vokasi dalam satu portal.</p>
+                    <p class="kecil"><img src="img/kata-img2.svg" alt="" class="mr-3">Siswi SMK 10 Jakarta</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores ullam voluptas, eius rerum!"</p>
-                    <p class="kecil"><img src="img/kata-img1.svg" alt="" class="mr-4">Maria Lopez, VP of Design at Meshery</p>
+                    <p>Aku jadi tau apa kemampuan yang aku miliki.</p>
+                    <p class="kecil"><img src="img/kata-img3.svg" alt="" class="mr-3">Siswi SMKN Yogyakarta</p>
                 </div>
                 <div class="col-lg-6">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores ullam voluptas, eius rerum!"</p>
-                    <p class="kecil"><img src="img/kata-img1.svg" alt="" class="mr-4">Maria Lopez, VP of Design at Meshery</p>
+                    <p>Sangat menarik! Mempermudah saya menemukan potensi yang saya miliki</p>
+                    <p class="kecil"><img src="img/kata-img4.svg" alt="" class="mr-3">Maria Lopez, VP of Design at Meshery</p>
                 </div>
             </div>
         </div>
@@ -127,12 +129,13 @@
     <div class="container-fluid row-abu mulai">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                     <p class="besar"><b>Siap temukan pekerjaanmu?</b></p>
                     <p>Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
-                <div class="col-lg-4 my-auto text-right">
-                    <button class="btn btndefault mr-4">Mulai Sekarang</button><button class="btn btnghost">Kontak Kami</button>
+                <div class="col-lg-5 my-auto text-right">
+                    <button class="btn btndefault mr-1">MULAI SEKARANG</button>
+                    <button class="btn btnghost">KONTAK KAMI</button>
                 </div>
             </div>
         </div>
@@ -151,6 +154,9 @@
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Cari Pekerjaan</a>
