--- a/detail-kerja.html
+++ b/detail-kerja.html
@@ -8,7 +8,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -25,10 +24,13 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Beranda</a>
-                    </li>
                     <li class="nav-item active">
+                        <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kenali Dirimu</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
@@ -118,11 +120,11 @@
     <div class="container-fluid row-abu mulai">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                     <p class="besar"><b>Siap temukan pekerjaanmu?</b></p>
                     <p>Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
-                <div class="col-lg-4 my-auto text-right">
+                <div class="col-lg-5 my-auto text-right">
                     <button class="btn btndefault mr-4">Mulai Sekarang</button><button class="btn btnghost">Kontak Kami</button>
                 </div>
             </div>
@@ -142,6 +144,9 @@
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Cari Pekerjaan</a>
