--- a/detail-pelatihan.html
+++ b/detail-pelatihan.html
@@ -8,7 +8,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -25,10 +24,13 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Beranda</a>
-                    </li>
                     <li class="nav-item active">
+                        <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kenali Dirimu</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
@@ -43,7 +45,7 @@
         </div>
     </nav>
     <!-- Navbar -->
-
+    
     <!-- Title -->
     <div class="container-fluid detailkerja-title row-abu py-4">
         <div class="container">
@@ -56,14 +58,10 @@
                     <p class="abu">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, soluta aliquid animi corporis nostrum asperiores.</p>
                     <div class="row">
                         <div class="col-6">
-                            <p class="mb-0"><img src="img/kata-img1.svg" class="mr-2" alt="">Nama Speaker</p>
+                            <p class="my-auto"><img src="img/kata-img1.svg" class="mr-2" alt="">Nama Speaker</p>
                         </div>
                         <div class="col-5 my-auto">
-                            <div class="row">
-                                <img src="img/star.svg" class="mr-2" alt="">
-                                <p class="mb-0">4.8 (100k)</p>
-                            </div>
-
+                            <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.8 (100k)</p>
                         </div>
                     </div>
                 </div>
@@ -73,7 +71,7 @@
                     <p class="d-inline">20$ OFF</p>
                     <div class="row">
                         <div class="col-12 text-right mt-3">
-                            <button class="btn btndefault d-inline">a</button>
+                            <button class="btn btnghost d-inline"><img src="img/shop-cart.svg" alt=""></button>
                             <button class="btn btndefault d-inline">Beli Sekarang</button>
                         </div>
                     </div>
@@ -84,24 +82,96 @@
     <!-- Title -->
 
     <!-- Main -->
-    <div class="container my-5">
+    <div class="container my-5 detailpelatihan-isi">
         <div class="row">
             <div class="col-12 mb-3">
                 <p class="besar">Deskripsi Pekerjaan</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
             </div>
+
             <div class="col-12 mb-3">
-                <p class="besar">Deskripsi Pekerjaan</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
+                <p class="besar">Kategori Pelatihan</p>
+                <ul class="nav my-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kategori</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kategori</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kategori</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kategori</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kategori</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kategori</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-3">
-                <p class="besar">Level</p>
-                <p>Tipe Pekerjaan</p>
+
+            <div class="col-12">
+                <p class="besar my-3">Sub Modul</p>
+
+                <div class="row mb-4">
+                    <div class="col-3">
+                        <img src="img/detailpelatihan-vid.svg" alt="">
+                    </div>
+                    <div class="col-6">
+                        <p class="besar">1. Nama Sub Modul Pelatihan</p>
+                        <p class="kecil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus fugiat, corporis pariatur cumque repudiandae, consequuntur ab maiores. Suscipit error veritatis nobis? Possimus rerum eius odio ipsum dolore. Ipsum, cupiditate, laboriosam.</p>
+                        <div class="row">
+                            <div class="col-3">
+                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">20:04</p>
+                            </div>
+                            <div class="col-3">
+                                <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.8 (3.381)</p>
+                            </div>
+                            <div class="col-3">
+                                <p class="my-auto"><img src="img/account.svg" class="mb-1 mr-2" alt="">1973</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 text-right">
+                        <p class="besar"><b>Rp 200.000</b></p>
+                        <p class="coret d-inline mr-3">Rp 700.000</p>
+                        <p class="d-inline">20% OFF</p>
+                        <button class="btn btnghost mt-3">Beli per Modul</button>
+                    </div>
+                </div>
+
+                <div class="row mb-4">
+                    <div class="col-3">
+                        <img src="img/detailpelatihan-vid.svg" alt="">
+                    </div>
+                    <div class="col-6">
+                        <p class="besar">2. Nama Sub Modul Pelatihan</p>
+                        <p class="kecil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus fugiat, corporis pariatur cumque repudiandae, consequuntur ab maiores. Suscipit error veritatis nobis? Possimus rerum eius odio ipsum dolore. Ipsum, cupiditate, laboriosam.</p>
+                        <div class="row">
+                            <div class="col-3">
+                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">20:04</p>
+                            </div>
+                            <div class="col-3">
+                                <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.8 (3.381)</p>
+                            </div>
+                            <div class="col-3">
+                                <p class="my-auto"><img src="img/account.svg" class="mb-1 mr-2" alt="">1973</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 text-right">
+                        <p class="besar"><b>Rp 200.000</b></p>
+                        <p class="coret d-inline mr-3">Rp 700.000</p>
+                        <p class="d-inline">20% OFF</p>
+                        <button class="btn btnghost mt-3">Beli per Modul</button>
+                    </div>
+                </div>
+
             </div>
-            <div class="col-3">
-                <p class="besar">Tipe Pekerjaan</p>
-                <p>Full Time</p>
-            </div>
+
         </div>
     </div>
     <!-- Main -->
@@ -110,11 +180,11 @@
     <div class="container-fluid row-abu mulai">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                     <p class="besar"><b>Siap temukan pekerjaanmu?</b></p>
                     <p>Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
-                <div class="col-lg-4 my-auto text-right">
+                <div class="col-lg-5 my-auto text-right">
                     <button class="btn btndefault mr-4">Mulai Sekarang</button><button class="btn btnghost">Kontak Kami</button>
                 </div>
             </div>
@@ -134,6 +204,9 @@
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Cari Pekerjaan</a>
