--- a/daftar.html
+++ b/daftar.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="style-responsive.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -24,8 +25,8 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
@@ -84,7 +85,7 @@
                     <button type="submit" class="btn btndefault">Daftar Sekarang</button>
                 </div>
                 <div class="col-12 text-center">
-                    <p class=" kecil mr-1">Sudah punya Akun?</p>
+                    <p class="kecil mr-1">Sudah punya Akun?</p>
                     <a class="normal" href="">Login Saja</a>
                 </div>
             </form>
@@ -96,11 +97,11 @@
     <footer class="py-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-md-3">
                     <img src="img/logo-footer.svg" alt="">
                     <p>Copyrights © Vocatinest Team 2020</p>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-md-9">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
