--- a/detail-kerja.html
+++ b/detail-kerja.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="style-responsive.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -24,13 +25,13 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
@@ -58,17 +59,17 @@
     <div class="container-fluid detailkerja-title row-abu py-4">
         <div class="container">
             <div class="row">
-                <div class="col-2">
+                <div class="col-2 my-auto">
                     <img src="img/detailkerja-img.svg" alt="">
                 </div>
                 <div class="col-7 my-auto">
-                    <p class="besar">Nama Pekerjaan</p>
-                    <p class="abu">Nama Instansi</p>
+                    <p class="besar">Staf Programer (Programmer Staff)</p>
+                    <p class="abu">PT Inet Global Indo</p>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-md-4 col-lg-3">
                             <p>DKI Jakarta</p>
                         </div>
-                        <div class="col-3">
+                        <div class="col-md-4 col-lg-3">
                             <p><b>Full Time</b></p>
                         </div>
                     </div>
@@ -91,12 +92,12 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
                 </div>
                 <div class="col-12 mb-3">
-                    <p class="besar">Deskripsi Pekerjaan</p>
+                    <p class="besar">Persyaratan</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
                 </div>
                 <div class="col-3">
                     <p class="besar">Level</p>
-                    <p>Tipe Pekerjaan</p>
+                    <p>Junior</p>
                 </div>
                 <div class="col-3">
                     <p class="besar">Tipe Pekerjaan</p>
@@ -120,12 +121,13 @@
     <div class="container-fluid row-abu mulai">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7">
+                <div class="col-7 my-auto">
                     <p class="besar"><b>Siap temukan pekerjaanmu?</b></p>
-                    <p>Mulai sekarang dan temukan bakat dan minatmu</p>
+                    <p class="mb-0">Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
-                <div class="col-lg-5 my-auto text-right">
-                    <button class="btn btndefault mr-4">Mulai Sekarang</button><button class="btn btnghost">Kontak Kami</button>
+                <div class="col-5 my-auto text-right">
+                    <button class="btn btndefault mr-1">MULAI SEKARANG</button>
+                    <button class="btn btnghost">KONTAK KAMI</button>
                 </div>
             </div>
         </div>
@@ -136,11 +138,11 @@
     <footer class="py-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-md-3">
                     <img src="img/logo-footer.svg" alt="">
                     <p>Copyrights © Vocatinest Team 2020</p>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-md-9">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
@@ -169,8 +171,6 @@
         </div>
     </footer>
     <!-- Footer -->
-
-
 
 </body>
 
