--- a/edit-profile.html
+++ b/edit-profile.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="style-responsive.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -312,8 +313,6 @@
                 </div>
             </form>
         </div>
-        
-        d
 
 
     </div>
@@ -323,11 +322,11 @@
     <footer class="py-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-md-3">
                     <img src="img/logo-footer.svg" alt="">
                     <p>Copyrights © Vocatinest Team 2020</p>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-md-9">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
