--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-icon.svg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="style-responsive.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -50,12 +51,12 @@
     <div class="container-fluid row-abu home1">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-6">
                     <p class="besar"><b>Training and Job Portal for Vocational Students</b></p>
                     <p class="kecil">Temukan Beragam Pilihan Pekerjaan Vokasi Sesuai dengan Bakat dan Minatmu</p>
                     <button class="btn btndefault mt-3">MULAI SEKARANG</button>
                 </div>
-                <div class="col-lg-6 text-right">
+                <div class="col-6 text-right">
                     <img src="img/home1.svg" alt="">
                 </div>
             </div>
@@ -67,10 +68,10 @@
     <div class="container-fluid row-putih home2">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-6">
                     <img src="img/home2.svg" alt="">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-6">
                     <p class="besar"><b>Find a Job</b></p>
                     <p class="kecil">Berbagi lowongan pekerjaan tersedia untuk lulusan pendidikan Vokasi</p>
                     <button class="btn btndefault mt-3">CARI PEKERJAAN</button>
@@ -84,12 +85,12 @@
     <div class="container-fluid row-abu home3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-6">
                     <p class="besar"><b>Find a Training</b></p>
                     <p class="kecil">Memiliki kemampuan dan keterampilan yang siap sesuai kebutuhan dunia kerja</p>
                     <button class="btn btndefault mt-3">CARI PELATIHAN</button>
                 </div>
-                <div class="col-lg-6 text-right">
+                <div class="col-6 text-right">
                     <img src="img/home3.svg" alt="">
                 </div>
             </div>
@@ -102,23 +103,23 @@
         <div class="container kata">
             <p class="besar text-center"><b>Apa kata mereka semua</b></p>
             <div class="row mb-4">
-                <div class="col-lg-6">
+                <div class="col-6">
                     <p>Mempermudah aku buat cari pekerjaan, aku pengen jadi programmer.</p>
-                    <p class="kecil"><img src="img/kata-img1.svg" alt="" class="mr-3">Siswa SMK 2 Teladan/p>
+                    <p class="kecil"><img src="img/kata-img1.svg" alt="" class="mr-3">Siswa SMK 2 Teladan</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-6">
                     <p>Lengkap, pekerjaan untuk siswa-siswi Vokasi dalam satu portal.</p>
                     <p class="kecil"><img src="img/kata-img2.svg" alt="" class="mr-3">Siswi SMK 10 Jakarta</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-6">
                     <p>Aku jadi tau apa kemampuan yang aku miliki.</p>
                     <p class="kecil"><img src="img/kata-img3.svg" alt="" class="mr-3">Siswi SMKN Yogyakarta</p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-6">
                     <p>Sangat menarik! Mempermudah saya menemukan potensi yang saya miliki</p>
-                    <p class="kecil"><img src="img/kata-img4.svg" alt="" class="mr-3">Maria Lopez, VP of Design at Meshery</p>
+                    <p class="kecil"><img src="img/kata-img4.svg" alt="" class="mr-3">Siswi SMK 10 Jakarta</p>
                 </div>
             </div>
         </div>
@@ -129,11 +130,11 @@
     <div class="container-fluid row-abu mulai">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7">
+                <div class="col-7 my-auto">
                     <p class="besar"><b>Siap temukan pekerjaanmu?</b></p>
-                    <p>Mulai sekarang dan temukan bakat dan minatmu</p>
+                    <p class="mb-0">Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
-                <div class="col-lg-5 my-auto text-right">
+                <div class="col-5 my-auto text-right">
                     <button class="btn btndefault mr-1">MULAI SEKARANG</button>
                     <button class="btn btnghost">KONTAK KAMI</button>
                 </div>
@@ -146,11 +147,11 @@
     <footer class="py-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-md-3">
                     <img src="img/logo-footer.svg" alt="">
                     <p>Copyrights © Vocatinest Team 2020</p>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-md-9">
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Tentang Kami</a>
