--- a/cari-pelatihan.html
+++ b/cari-pelatihan.html
@@ -18,29 +18,29 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light nav1">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Beranda</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pekerjaan</a>
+                        <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Cari Pelatihan</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btndefault " type="submit">Masuk</button>&nbsp;&nbsp;
-                    <button class="btn btnghost" type="submit">Daftar</button>
+                    <a href="masuk.html" class="btn btndefault" type="submit">Masuk</a>&nbsp;&nbsp;
+                    <a href="daftar.html" class="btn btnghost" type="submit">Daftar</a>
                 </form>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="row mb-5">
                 <div class="col-9 col-md-7">
                     <p class="besar"><b>Rekomendasi Pelatihan</b></p>
-                    <p>Login dan temukan pelatihan sesuai dengan minatmu<a href="" class="ml-3">Daftar sekarang</a></p>
+                    <p>Login dan temukan pelatihan sesuai dengan minatmu<a href="daftar.html" class="ml-3">Daftar sekarang</a></p>
                 </div>
                 <div class="col-3 col-md-5 text-right">
                     <p>Total <b>252 Hasil</b></p>
@@ -95,10 +95,10 @@
             <div class="row mb-4">
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="card pelatihan">
-                        <img src="img/header2-card1.svg" class="card-img-top" alt="...">
+                        <a href="detail-pelatihan.html"><img src="img/header2-card1.svg" class="card-img-top" alt="..."></a>
                         <div class="card-body">
-                            <a class="kategori" href="">PENGEMBANGAN DIRI</a>
-                            <p class="mb-2"><b>Menjadi pribadi unggul dalam Interview Kerja</b></p>
+                            <a class="kategori" href="detail-pelatihan.html">PENGEMBANGAN DIRI</a>
+                            <a href="detail-pelatihan.html"><p class="mb-2"><b>Menjadi pribadi unggul dalam Interview Kerja</b></p></a>
                             <p>Muhammad Cipta Suhaja</p>
                             <p class="abu">Senior Manager, Human Resources, Gojek</p>
                             <br>
@@ -400,8 +400,8 @@
                     <p class="mb-0">Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
                 <div class="col-5 my-auto text-right">
-                    <button class="btn btndefault mr-1">MULAI SEKARANG</button>
-                    <button class="btn btnghost">KONTAK KAMI</button>
+                    <a href="daftar.html" class="btn btndefault mr-1">MULAI SEKARANG</a>
+                    <a href="" class="btn btnghost">KONTAK KAMI</a>
                 </div>
             </div>
         </div>
@@ -413,8 +413,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/logo-footer.svg" alt="">
-                    <p>Copyrights © Vocatinest Team 2020</p>
+                    <a href="index.html"><img src="img/logo-footer.svg" alt="">
+                    <p>Copyrights © Vocatinest Team 2020</p></a>
                 </div>
                 <div class="col-md-9">
                     <ul class="nav justify-content-end">
@@ -425,10 +425,10 @@
                             <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pekerjaan</a>
+                            <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pelatihan</a>
+                            <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bantuan</a>
