--- a/daftar.html
+++ b/daftar.html
@@ -18,29 +18,29 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light nav1">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Beranda</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pekerjaan</a>
+                        <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pelatihan</a>
+                        <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btndefault " type="submit">Masuk</button>&nbsp;&nbsp;
-                    <button class="btn btnghost" type="submit">Daftar</button>
+                    <a href="masuk.html" class="btn btndefault" type="submit">Masuk</a>&nbsp;&nbsp;
+                    <a href="daftar.html" class="btn btnghost" type="submit">Daftar</a>
                 </form>
             </div>
         </div>
@@ -82,11 +82,11 @@
                     </label>
                 </div>
                 <div class="col-12 text-center my-5">
-                    <button type="submit" class="btn btndefault">Daftar Sekarang</button>
+                    <a href="masuk.html" type="submit" class="btn btndefault">Daftar Sekarang</a>
                 </div>
                 <div class="col-12 text-center">
                     <p class="kecil mr-1">Sudah punya Akun?</p>
-                    <a class="normal" href="">Login Saja</a>
+                    <a class="normal" href="masuk.html">Login Saja</a>
                 </div>
             </form>
         </div>
@@ -98,8 +98,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/logo-footer.svg" alt="">
-                    <p>Copyrights © Vocatinest Team 2020</p>
+                    <a href="index.html"><img src="img/logo-footer.svg" alt="">
+                    <p>Copyrights © Vocatinest Team 2020</p></a>
                 </div>
                 <div class="col-md-9">
                     <ul class="nav justify-content-end">
@@ -110,10 +110,10 @@
                             <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pekerjaan</a>
+                            <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pelatihan</a>
+                            <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bantuan</a>
