--- a/detail-kerja.html
+++ b/detail-kerja.html
@@ -18,29 +18,29 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light nav1">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Beranda</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Cari Pekerjaan</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pelatihan</a>
+                        <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btndefault " type="submit">Masuk</button>&nbsp;&nbsp;
-                    <button class="btn btnghost" type="submit">Daftar</button>
+                    <a href="masuk.html" class="btn btndefault" type="submit">Masuk</a>&nbsp;&nbsp;
+                    <a href="daftar.html" class="btn btnghost" type="submit">Daftar</a>
                 </form>
             </div>
         </div>
@@ -50,7 +50,7 @@
     <!-- Row Login -->
     <div class="container-fluid row-abu2 py-3">
         <div class="container">
-            <p class="my-auto"><img src="img/info.svg" class="mr-2" alt="">Login untuk melihan kecocokan Pekerjaan ini dengan minat Anda. <a href="">Login Sekarang</a></p>
+            <p class="my-auto"><img src="img/info.svg" class="mr-2" alt="">Login untuk melihan kecocokan Pekerjaan ini dengan minat Anda. <a href="masuk.html">Login Sekarang</a></p>
         </div>
     </div>
     <!-- Row Login -->
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="col-3 my-auto">
-                    <button class="btn btndefault mb-2">Daftar Pekerjaan</button>
+                    <a href="daftar.html" class="btn btndefault mb-2">Daftar Pekerjaan</a>
                     <p class="abu">Diposting 1 Minggu yang lalu</p>
                 </div>
             </div>
@@ -126,8 +126,8 @@
                     <p class="mb-0">Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
                 <div class="col-5 my-auto text-right">
-                    <button class="btn btndefault mr-1">MULAI SEKARANG</button>
-                    <button class="btn btnghost">KONTAK KAMI</button>
+                    <a href="daftar.html" class="btn btndefault mr-1">MULAI SEKARANG</a>
+                    <a href="" class="btn btnghost">KONTAK KAMI</a>
                 </div>
             </div>
         </div>
@@ -139,8 +139,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/logo-footer.svg" alt="">
-                    <p>Copyrights © Vocatinest Team 2020</p>
+                    <a href="index.html"><img src="img/logo-footer.svg" alt="">
+                    <p>Copyrights © Vocatinest Team 2020</p></a>
                 </div>
                 <div class="col-md-9">
                     <ul class="nav justify-content-end">
@@ -151,10 +151,10 @@
                             <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pekerjaan</a>
+                            <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pelatihan</a>
+                            <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bantuan</a>
