--- a/edit-profile.html
+++ b/edit-profile.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light nav1">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,34 +26,21 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Dashboard</a>
+                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pekerjaan</a>
+                        <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pelatihan</a>
-                    </li>
-                    <li class="nav-item cart">
-                        <a class="nav-link" href="#"><img src="img/nav-shop-cart.svg" alt=""></a>
+                        <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 navbar-profile">
-                    <img class="profile mr-2" src="img/nav-img-profile.svg" alt="">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Bambang Baskoro
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                            </div>
-                        </li>
-                    </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <a href="masuk.html" class="btn btndefault" type="submit">Masuk</a>&nbsp;&nbsp;
+                    <a href="daftar.html" class="btn btnghost" type="submit">Daftar</a>
                 </form>
             </div>
         </div>
@@ -63,45 +50,47 @@
     <!-- Main -->
     <div class="container-fluid row-putih pt-0 pb-0">
         <div class="container dashboard mb-5">
-            <p class="besar">Dashboard Anda</p>
-            <p class="abu">Temukan Beragam Pilihan Pekerjaan Vokasi Sesuai Dengan Bakat dan Minatmu</p>
+            <div class="col-12 text-center">
+                <p class="besar">Dashboard Anda</p>
+                <p class="abu">Temukan Beragam Pilihan Pekerjaan Vokasi Sesuai Dengan Bakat dan Minatmu</p>
+            </div>
             <div class="col-12 top">
                 <div class="row mt-4 justify-content-center">
-                    <button class="col-3 btn p-4 mr-4 text-left active">
+                    <a href="dashboard-profile.html" class="col-3 btn p-4 mr-4 text-left active">
                         <div class="row">
-                            <div class="col-3 my-auto">
+                            <div class="col-md-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-1-active.svg" alt="">
                             </div>
-                            <div class="col-9">
+                            <div class="col-md-8 col-lg-9 my-auto">
                                 <p class="besar">PROFIL ANDA</p>
                                 <p class="kecil"><b>30%</b> Lengkap</p>
                             </div>
                         </div>
-                    </button>
+                    </a>
 
-                    <button class="col-3 btn p-4 text-left">
+                    <a class="col-3 btn p-4 text-left">
                         <div class="row">
-                            <div class="col-3 my-auto">
+                            <div class="col-md-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-2.svg" alt="">
                             </div>
-                            <div class="col-9">
+                            <div class="col-md-8 col-lg-9 my-auto">
                                 <p class="besar">PEKERJAAN ANDA</p>
                                 <p class="kecil"><b>4</b> pekerjaan yang sesuai</p>
                             </div>
                         </div>
-                    </button>
+                    </a>
 
-                    <button class="col-3 btn p-4 ml-4 text-left">
+                    <a class="col-3 btn p-4 ml-4 text-left">
                         <div class="row">
-                            <div class="col-3 my-auto">
+                            <div class="col-md-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-3.svg" alt="">
                             </div>
-                            <div class="col-9">
+                            <div class="col-md-8 col-lg-9 my-auto">
                                 <p class="besar">PELATIHAN ANDA</p>
                                 <p class="kecil"><b>2</b> pelatihan yang diikuti</p>
                             </div>
                         </div>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -323,8 +312,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/logo-footer.svg" alt="">
-                    <p>Copyrights © Vocatinest Team 2020</p>
+                    <a href="index.html"><img src="img/logo-footer.svg" alt="">
+                        <p>Copyrights © Vocatinest Team 2020</p>
+                    </a>
                 </div>
                 <div class="col-md-9">
                     <ul class="nav justify-content-end">
@@ -335,10 +325,10 @@
                             <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pekerjaan</a>
+                            <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pelatihan</a>
+                            <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bantuan</a>
