--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light nav1">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo-navbar.svg" class="img-fluid" alt="Responsive image"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,21 +26,21 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Beranda<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pekerjaan</a>
+                        <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cari Pelatihan</a>
+                        <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="btn btndefault " type="submit">Masuk</button>&nbsp;&nbsp;
-                    <button class="btn btnghost" type="submit">Daftar</button>
+                    <a href="masuk.html" class="btn btndefault" type="submit">Masuk</a>&nbsp;&nbsp;
+                    <a href="daftar.html" class="btn btnghost" type="submit">Daftar</a>
                 </form>
             </div>
         </div>
@@ -54,7 +54,7 @@
                 <div class="col-6">
                     <p class="besar"><b>Training and Job Portal for Vocational Students</b></p>
                     <p class="kecil">Temukan Beragam Pilihan Pekerjaan Vokasi Sesuai dengan Bakat dan Minatmu</p>
-                    <button class="btn btndefault mt-3">MULAI SEKARANG</button>
+                    <a href="daftar.html" class="btn btndefault mt-3">MULAI SEKARANG</a>
                 </div>
                 <div class="col-6 text-right">
                     <img src="img/home1.svg" alt="">
@@ -74,7 +74,7 @@
                 <div class="col-6">
                     <p class="besar"><b>Find a Job</b></p>
                     <p class="kecil">Berbagi lowongan pekerjaan tersedia untuk lulusan pendidikan Vokasi</p>
-                    <button class="btn btndefault mt-3">CARI PEKERJAAN</button>
+                    <a href="cari-kerja.html" class="btn btndefault mt-3">CARI PEKERJAAN</a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="col-6">
                     <p class="besar"><b>Find a Training</b></p>
                     <p class="kecil">Memiliki kemampuan dan keterampilan yang siap sesuai kebutuhan dunia kerja</p>
-                    <button class="btn btndefault mt-3">CARI PELATIHAN</button>
+                    <a href="cari-pelatihan.html" class="btn btndefault mt-3">CARI PELATIHAN</a>
                 </div>
                 <div class="col-6 text-right">
                     <img src="img/home3.svg" alt="">
@@ -135,8 +135,8 @@
                     <p class="mb-0">Mulai sekarang dan temukan bakat dan minatmu</p>
                 </div>
                 <div class="col-5 my-auto text-right">
-                    <button class="btn btndefault mr-1">MULAI SEKARANG</button>
-                    <button class="btn btnghost">KONTAK KAMI</button>
+                    <a href="daftar.html" class="btn btndefault mr-1">MULAI SEKARANG</a>
+                    <a href="" class="btn btnghost">KONTAK KAMI</a>
                 </div>
             </div>
         </div>
@@ -148,8 +148,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="img/logo-footer.svg" alt="">
-                    <p>Copyrights © Vocatinest Team 2020</p>
+                    <a href="index.html"><img src="img/logo-footer.svg" alt="">
+                    <p>Copyrights © Vocatinest Team 2020</p></a>
                 </div>
                 <div class="col-md-9">
                     <ul class="nav justify-content-end">
@@ -160,10 +160,10 @@
                             <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pekerjaan</a>
+                            <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cari Pelatihan</a>
+                            <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bantuan</a>
